# neko233-hardware-viewer

./: .gitignore  README.md  build-windows.cmd  dev.cmd  generate-icons.cmd  generate-icons.js  git-push.cmd  index.html  package-lock.json  package.json  release.js  tsconfig.json  一键发布.cmd  一键发布.ps1
.github/: copilot-instructions.md
.github/workflows/: release.yml
scripts/: generate-latest-json.js
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  diagnostics.rs  main.rs  network_tools.rs  optimization.rs  scoring.rs
src-tauri/src/hardware/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  monitor.rs  motherboard.rs  network.rs  peripherals.rs  sound.rs
src/assets/: cyberpunk.css
src/components/: ActivationView.vue  ColorManagementView.vue  DiagnosticsView.vue  DriverCleanerView.vue  FeaturesView.vue  HardwareView.vue  LanguageSelector.vue  NetworkView.vue  OfficeView.vue  OptimizationView.vue  RankingView.vue  SettingsView.vue  Sidebar.vue  UninstallView.vue  Win11InstallView.vue  Win11TweaksView.vue
src/composables/: useTasks.ts
src/config/: drivers.ts  rankingData.ts
src/locales/: en.ts  zh.ts
