[package]
name = "neko233-hardware-viewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]

tauri = { version = "^2.0.0", features = [] }

tauri-plugin-shell = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
anyhow = "1.0.100"
colored = "3.0.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.30.13"

wmi = "0.13.3"
winreg = "0.55.0"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
